fade effects added

--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="row mt-60">
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp  animated" data-wow-delay="100ms" style="visibility: visible; animation-delay: 100ms; animation-name: fadeInUp;">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="100ms" style="animation-delay: 100ms;">
                         <div class="feature-item-wrap">
                             <div class="feature-icon">
                                 <img src="images/001-badge.png" alt="">
@@ -170,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                         <div class="feature-item-wrap">
                             <div class="feature-icon">
                                 <img src="images/002-group.png" alt="">
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp  animated" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 300ms;">
                         <div class="feature-item-wrap">
                             <div class="feature-icon">
                                 <img src="images/003-customer-service.png" alt="">
@@ -204,7 +204,7 @@
         <div class="about-section about-two section-padding">
             <div class="container header-container">
                 <div class="row">
-                    <div class="col-xl-6 col-lg-6 col-12 wow fadeInDown  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInDown;">
+                    <div class="col-xl-6 col-lg-6 col-12 wow fadeInDown reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                         <div class="about-left-wrap">
                             <div class="section-title">
                                 <p>About Company</p>
@@ -223,13 +223,13 @@
                                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore in fugiat nulla pariatur.</p>
                                 </div>
                             </div>
-                            <div class="about-left-img wow fadeInUp" data-wow-delay="400ms" style="visibility: visible; animation-delay: 400ms; animation-name: fadeInUp;">
+                            <div class="about-left-img wow fadeInUp reveal" data-wow-delay="400ms" style="animation-delay: 400ms;">
                                 <img src="images/about-3.jpg" alt="">
                                 <a href="about.html">Discover More</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-6 col-12 wow fadeInRight  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInRight;">
+                    <div class="col-xl-6 col-lg-6 col-12 wow fadeInRight reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                         <div class="about-right-wrap">
                             <div class="about-right-img">
                                 <img src="images/about-4.jpg" alt="">
@@ -307,7 +307,7 @@
     <div class="footer-area about-footer">
         <div class="container header-container">
             <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="footer-widget">
                         <div class="logo">
                             <a class="navbar-brand" href="index.html">Money Maa</a>
@@ -324,7 +324,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-xl-1 col-xl-5 col-lg-5 col-md-6 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="offset-xl-1 col-xl-5 col-lg-5 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                      <div class="footer-widget">
                         <div class="row">
                             <div class="col-md-6">
@@ -351,7 +351,7 @@
                         </div>
                      </div>   
                 </div>
-                <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp  animated" data-wow-delay="600ms" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">
+                <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
                     <div class="footer-widget">
                         <div class="project-gallery">
                             <h5>Social Accounts</h5>
@@ -366,7 +366,7 @@
             </div>
             <div class="row">
                 <div class="col-xl-12 text-center">
-                    <div class="founder-year-wrap wow fadeInUp  animated" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                    <div class="founder-year-wrap wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 300ms;">
                         <span>since 1990</span>
                     </div>
                     <div class="footer-navbar">
