--- a/contact.html
+++ b/contact.html
@@ -210,7 +210,7 @@
     <div class="footer-area contact-footer">
         <div class="container header-container">
             <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="footer-widget">
                         <div class="logo">
                             <a class="navbar-brand" href="index.html">Money Maa</a>
@@ -227,7 +227,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-xl-1 col-xl-5 col-lg-5 col-md-6 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="offset-xl-1 col-xl-5 col-lg-5 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                      <div class="footer-widget">
                         <div class="row">
                             <div class="col-md-6">
@@ -254,7 +254,7 @@
                         </div>
                      </div>   
                 </div>
-                <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp  animated" data-wow-delay="600ms" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">
+                <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
                     <div class="footer-widget">
                         <div class="project-gallery">
                             <h5>Social Accounts</h5>
@@ -269,7 +269,7 @@
             </div>
             <div class="row">
                 <div class="col-xl-12 text-center">
-                    <div class="founder-year-wrap wow fadeInUp  animated" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                    <div class="founder-year-wrap wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 300ms;">
                         <span>since 1990</span>
                     </div>
                     <div class="footer-navbar">
