--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <div class="hero-area light-bg-2">
         <div class="container header-container">
-            <div class="hero-area-content wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">            
+            <div class="hero-area-content wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">            
                 <h3>Your Trusted Finance Advisor.</h3>
                 <h1>Trustworthy Finance <br>Advice</h1>            
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint sunt in culpa qui officia deserunt <a href="about.html">Discover More</a> </p>                    
@@ -148,7 +148,7 @@
 
           </div>
     </div>
-    <div class="client-area wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+    <div class="client-area wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
         <div class="client-area-inner">
             <div class="client-area-title">
                 <h6>Trusted Over 240+ Client</h6>
@@ -174,7 +174,7 @@
                 </div>
             </div>
             <div class="row mt-60">
-                <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp  animated" data-wow-delay="100ms" style="visibility: visible; animation-delay: 100ms; animation-name: fadeInUp;">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="100ms" style="animation-delay: 100ms;">
                     <div class="feature-item-wrap">
                         <div class="feature-icon">
                             <img src="images/001-badge.png" alt="">
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="feature-item-wrap">
                         <div class="feature-icon">
                             <img src="images/002-group.png" alt="">
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp  animated" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 300ms;">
                     <div class="feature-item-wrap">
                         <div class="feature-icon">
                             <img src="images/003-customer-service.png" alt="">
@@ -216,7 +216,7 @@
     <div class="service-section white-bg section-padding">
         <div class="container header-container">
             <div class="row">
-                <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInLeft;">
+                <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="single-service-wrap">
                         <div class="single-service-inner">
                             <h5><a href="child-future-saving.html">Financial Planning</a></h5>
@@ -241,7 +241,7 @@
                         
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="service-content-wrap">
                         <div class="section-title">
                             <h6>WHAT WE PROVIDE</h6>
@@ -292,14 +292,14 @@
     <div class="about-section white-bg section-padding">
         <div class="container header-container">
             <div class="row">
-                <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft  animated" data-wow-delay="100ms" style="visibility: visible; animation-delay: 100ms; animation-name: fadeInLeft;">
+                <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft reveal" data-wow-delay="100ms" style="animation-delay: 100ms;">
                     <div class="about-bg-one" data-background="assets/img/about/about-1.jpg" style="background-image: url('images/about-1.jpg');">                        
                         <div class="about-tag-title">
                             <h4>We Have More Than 10 Years of Experience</h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="about-content-wrap">
                         <div class="section-title">
                             <h6>About Company</h6>
@@ -320,7 +320,7 @@
                 </div>
             </div>
             <div class="row">                
-                <div class="col-xl-6 col-lg-6 col-12 text-end wow fadeInUp  animated" data-wow-delay="100ms" style="visibility: visible; animation-delay: 100ms; animation-name: fadeInUp;">
+                <div class="col-xl-6 col-lg-6 col-12 text-end wow fadeInUp reveal" data-wow-delay="100ms"  style="animation-delay: 100ms;">
                     <div class="about-content-wrap pr-60">
                         <div class="section-title">
                             <h6>Who We Are</h6>
@@ -330,7 +330,7 @@
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable </p>
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-12 wow fadeInRight  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInRight;">
+                <div class="col-xl-6 col-lg-6 col-12 wow fadeInRight  animated" data-wow-delay="200ms">
                     <div class="about-bg-two" data-background="assets/img/about/about-2.jpg" style="background-image: url('images/about-2.jpg');">                        
                         <div class="about-tag-title">
                             <h4>99.9% Customer Satisfaction</h4>
@@ -537,7 +537,7 @@
     <div class="footer-area">
         <div class="container header-container">
             <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                     <div class="footer-widget">
                         <div class="logo">
                             <a class="navbar-brand" href="index.html">Money Maa</a>
@@ -554,7 +554,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="offset-xl-1 col-xl-5 col-lg-5 col-md-6 col-12 wow fadeInUp  animated" data-wow-delay="200ms" style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="offset-xl-1 col-xl-5 col-lg-5 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                      <div class="footer-widget">
                         <div class="row">
                             <div class="col-md-6">
@@ -581,7 +581,7 @@
                         </div>
                      </div>   
                 </div>
-                <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp  animated" data-wow-delay="600ms" style="visibility: visible; animation-delay: 600ms; animation-name: fadeInUp;">
+                <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
                     <div class="footer-widget">
                         <div class="project-gallery">
                             <h5>Social Accounts</h5>
@@ -596,7 +596,7 @@
             </div>
             <div class="row">
                 <div class="col-xl-12 text-center">
-                    <div class="founder-year-wrap wow fadeInUp  animated" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                    <div class="founder-year-wrap wow fadeInUp reveal" data-wow-delay="300ms" style="animation-delay: 300ms;">
                         <span>since 1990</span>
                     </div>
                     <div class="footer-navbar">
