--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <div class="hero-area light-bg-2">
         <div class="container header-container">
-            <div class="hero-area-content wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">            
+            <div class="hero-area-content wow fadeInUp animated" data-wow-delay="200ms" style="animation-delay: 200ms; visibility: visible; animation-name: fadeInUp;">            
                 <h3>Your Trusted Finance Advisor.</h3>
                 <h1>Trustworthy Finance <br>Advice</h1>            
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint sunt in culpa qui officia deserunt <a href="about.html">Discover More</a> </p>                    
