--- a/about.html
+++ b/about.html
@@ -111,6 +111,49 @@
         </div></div>
     </div>
 
+    <!-- mobile header -->
+
+    <div class="mobile-header green-bg">
+        <div class="container header-container mobile-menu-container">
+            <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html">Money Maa</a></div>
+            <div class="mobile-menu">
+                <button class="hamburger">&#9776;</button>
+                <button class="cross">&#735;</button>
+            <div class="menu">
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="#" class="nav__submenu">Services <i class="fas fa-chevron-right"></i>
+                    <ul class="nav__sub">
+                        <li class="nav__item"><a class="sub__close" href="#"><i class="fas fa-chevron-left"></i> Back</a></li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="taxation.html">Taxation</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="bonds.html">Corporate Bonds</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="pms-aif.html">PMS / AIF</a>
+                        </li>
+                    </ul>
+                </a>
+                </li>
+                <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div> 
+            </div>
+        </div>
+    </div>
+
     <!-- breadcrumb section -->
 
     <div class="breadcrumb-area section-padding light-bg-1 pb-0">
