--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     <div class="header-top-area green-bg">
         <div class="header-container container">
             <div class="row">
-                <div class="col-xl-4 col-lg-5 col-md-5 col-12">
+                <div class="col-xl-4 col-lg-5 col-md-5 col-12 col-sm-12">
                     <div class="header-info">
                         <i class="fa-solid fa-clock"></i>
                         <p><span>Working Hours</span>: Sunday-Monday, 09 a.m.- 5 p.m.</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-3 col-md-3 col-12 text-center">
+                <div class="col-xl-4 col-lg-3 col-md-3 col-12 col-sm-12 text-center">
                     <div class="contact-info">                        
                         <a href="tel:+000(123)556989"><span>Call</span>: +000(123)556989</a>
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-end">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 col-sm-12 text-end">
                     <div class="social-icon">                        
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -87,7 +87,7 @@
                                                     <a href="taxation.html">Taxation</a>
                                                 </li>                                               
                                                 <li>
-                                                    <a href="bonds.html">Bonds</a>
+                                                    <a href="bonds.html">Corporate Bonds</a>
                                                 </li>                                                
                                                 <li>
                                                     <a href="pms-aif.html">PMS / AIF</a>
@@ -111,6 +111,47 @@
         </div></div>
         <div class="header_right_bg">
             <img src="images/top_right_bg.png" alt="">
+        </div>
+    </div>
+
+    <div class="mobile-header green-bg">
+        <div class="container header-container mobile-menu-container">
+            <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html">Money Maa</a></div>
+            <div class="mobile-menu">
+                <button class="hamburger">&#9776;</button>
+                <button class="cross">&#735;</button>
+            <div class="menu">
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="#" class="nav__submenu">Services <i class="fas fa-chevron-right"></i>
+                    <ul class="nav__sub">
+                        <li class="nav__item"><a class="sub__close" href="#"><i class="fas fa-chevron-left"></i> Back</a></li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="mutual-funds.html">Mutual Funds</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="retirement-saving.html">Retirement Planning</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="child-future-saving.html">Child Future Saving</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="taxation.html">Taxation</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="bonds.html">Corporate Bonds</a>
+                        </li>
+                        <li class="nav__item">
+                          <a class="nav__link" href="pms-aif.html">PMS / AIF</a>
+                        </li>
+                    </ul>
+                </a>
+                </li>
+                <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div> 
+            </div>
         </div>
     </div>
 
@@ -265,19 +306,19 @@
         <div class="overlay-2"></div>
         <div class="container header-container">
             <div class="row"  id="counter-about">
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
                     <div class="single-counter-box">
                         <p class="count counter-number" data-count="150">0</p>
                         <h6>Cases Completed</h6>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
                     <div class="single-counter-box">
                         <p class="count counter-number" data-count="19">0</p>
                         <h6>Consultants</h6>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-12 col-lg-4 col-md-6 col-sm-12">
                     <div class="single-counter-box">
                         <p class="count counter-number" data-count="130">0</p>
                         <h6>Award Won</h6>
