added inner pages

--- a/mutual-funds.html
+++ b/mutual-funds.html
@@ -214,6 +214,38 @@
                     </div>
                  </div>
              </div>
+
+             <div class="row">
+                <div class="col-12">
+                    <div class="bg-tag-orange">
+                        <h2>Systematic Investment Plan (SIP)</h2>
+                    </div>
+                 </div>
+                 <div class="col-xl-12">
+                    <div class="service-page-content">
+                        <p>This is a simple strategy for accumulating wealth over a period of time by investing regularly at a fixed interval of time in mutual fund schemes, this is similar to the concept of recurring deposits scheme, but this being in equity come tagged with relatively a higher risk and higher return than the recurring deposit.<br> <br>An investor adopts a systematic investment approach by committing a fixed amount at regular intervals over an extended period. This strategic method ensures the acquisition of more investment units when market prices are lower and fewer units when prices are higher. Operating on the principle of rupee cost averaging, this approach enables investors to automatically navigate the market's fluctuations. By consistently investing at various market levels, individuals effectively participate in the natural swings of the market, leveraging the potential benefits of acquiring assets at different price points over time.</p>
+                        <h2>Advantages</h2>
+                        <div class="about-feature-list service-list">
+                           <div class="row">
+                               <div class="col-md-6 col-12">
+                                   <ul>
+                                       <li><i class="fa-solid fa-check"></i>Rupee Cost Averaging</li>
+                                       <p>One of the primary advantages of a Systematic Investment Plan (SIP) is the application of rupee cost averaging. By investing a fixed amount at regular intervals, investors automatically buy more units when prices are lower and fewer units when prices are higher. This disciplined approach helps in reducing the impact of market volatility on the overall investment.</p>
+                                           <li><i class="fa-solid fa-check"></i>Disciplined Investing</li> 
+                                           <p>SIP encourages a disciplined investment approach. Investors commit to a predetermined investment amount at regular intervals, promoting consistency in savings and investment behavior. This helps avoid impulsive investment decisions influenced by short-term market fluctuations.</p>                                       
+                                   </ul>
+                               </div>
+                               <div class="col-md-6 col-12">
+                                   <ul>
+                                       <li><i class="fa-solid fa-check"></i>Flexibility</li>
+                                       <p>SIPs offer flexibility in terms of investment amounts and frequencies. Investors can choose the amount they wish to invest and the interval at which they want to make contributions. This adaptability makes it suitable for investors with varying financial capacities and goals.</p>
+                                   </ul>
+                               </div>
+                           </div>
+                       </div>
+                    </div>
+                </div>
+             </div>
         </div> 
      </div>
 
