--- a/contact.html
+++ b/contact.html
@@ -199,7 +199,7 @@
                                 <h2>Have Questions? 
                                     Get in Touch!</h2>
                             </div>
-                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit fugit, sed quia consequuntur magni dolores eos qui ratione</p>
+                            <p>Our team of experienced financial advisors is ready to understand your unique goals and challenges. Feel free to reach out.</p>
                             <div class="contact-details">
                                 <div class="single-contact-info">
                                     <div class="contact-icon">
