--- a/index.html
+++ b/index.html
@@ -559,10 +559,10 @@
 
     <div class="clients-area pb-120">
         <div class="client-logo-wrap">
-            <img src="images/nj-mutual-fund.png" alt="themeforest-logo">
-            <img src="images/nj-mutual-fund.png" alt="codecanyon-logo">
-            <img src="images/nj-mutual-fund.png" alt="videohibe-logo">
-            <img src="images/nj-mutual-fund.png" alt="graphicriver-logo">
+            <img src="images/nj-mutual-fund.png" alt="nj-mutual">
+            <img src="images/star-health.png" alt="star-health">
+            <img src="images/lic-logo.png" alt="lic-logo">
+            <img src="images/hdfc-ergo.png" alt="hdfc-ergo">
         </div>
     </div>
 
