--- a/pms-aif.html
+++ b/pms-aif.html
@@ -31,13 +31,13 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-end">
+                <!-- <div class="col-xl-4 col-lg-4 col-md-4 col-12 text-end">
                     <div class="social-icon">                        
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
